tests/unit-fail/j038a.ref
Error: B2
Description: function call has fewer arguments than parameters in function definition.
Type: Undefined behavior.
See also: C11 sec. 6.5.2.2:6
  at foo(j038a.c:4)
  at main(j038a.c:4)
  at <file-scope>(<unknown>)
